# local-llm

./: README.md  main.py  pyproject.toml  vectordb_build.py
config/: config.yml
vectordb/chroma/: chroma.sqlite3
