[project]
name = ""
version = ""
description = ""
authors = [
    {name = "leotraven", email = "leo@traven.de"},
]
dependencies = [
    "langchain>=0.0.341",
    "faiss-cpu>=1.7.4",
    "openai>=1.3.5",
    "sentence-transformers>=2.2.2",
    "llama-cpp-python>=0.2.20",
    "streamlit>=1.28.2",
    "chromadb>=0.4.18",
    "python-box>=7.1.1",
    "PyYaml>=6.0.1",
    "pypdf>=3.17.1",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

